<resources>
    <string name="app_name">View</string>
    <string name="action_settings">设置</string>
    <string name="ADD_Fragment1">添加Fragment-1</string>
    <string name="ADD_Fragment2">添加Fragment-2</string>
    <string name="Remove_Fragment2">移除Fragment-2</string>
    <string name="Replace_Fragment1">替换Fragment-1</string>
    <string name="Fragment_DEMO">Fragment Demo</string>
    <string name="data_DEMO">数据保存</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="addPerferenceData">添加Perferencd值</string>
    <string name="getPerferenceData">获取Perference值</string>
    <string name="ListView">ListViwe样例</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="Network">网络操作</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="Get_net_data">获取网络数据</string>
    <string name="ViewPager">ViewPager样例</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="title_activity_zhuti">ZhutiActivity</string>
    <string name="title_activity_swipe_refresh">SwipeRefreshActivity</string>
    <string name="SwipeRefresh">下拉刷新</string>
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="CardView">卡片式布局</string>
    <string name="myListView">自定义ListVIew适配器</string>
    <string name="title_activity_my_list_view">MyListViewActivity</string>
    <string name="VolleyView">VolleyView</string>
    <string name="title_activity_volley">VolleyActivity</string>
    <string name="getrequest">getRequest</string>
    <string name="getRequest">getRequest</string>
    <string name="result">请求结果</string>
    <string name="getImg">ImageRequest的用法</string>
    <string name="imgLoader">imgLoader获取图片</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>

</resources>
