<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="makyu.view.MainActivity">


    <Button
        android:id="@+id/fragment_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fragment_DEMO"/>

    <Button
        android:id="@+id/data_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_DEMO"/>

    <Button
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListView"/>

    <Button
        android:id="@+id/viewPagerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ViewPager"/>

    <Button
        android:id="@+id/swipeRefreshView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SwipeRefresh"/>

    <Button
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CardView"/>

    <Button
        android:id="@+id/myListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myListView"/>

    <Button
        android:id="@+id/VolleyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VolleyView"/>
    <Button
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecyclerView"/>

</LinearLayout>